--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Conecta 4</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='test.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 
 </head>
-<body>
-	<section class = "principal">
-		<div class="board" id="board"></div>
+<body >
+	<div class="container">
 		<div class = "opciones">
-			<h2>Elegir la dificultad</h2>
+			<h2>Dificultad</h2>
 			<div class="radio">
 				<input type="radio" id="dificil" name="dificultad" value="6">
 				<label for="dificil">Dificil</label>
@@ -24,7 +23,12 @@
 		</div>
 		<div class = "button">
 			<button class="btn pulse-effect" id="start">Iniciar</button>
-			<button class="btn pulse-effect" id = "reset"> Reiniciar</button>
+			<button class="btn pulse-effect" style="display: none" id = "reset"> Reiniciar</button>
+		</div>
+	</div>
+	<section class = "principal">
+		<div class="board" id="board"></div>
+		<div class="turno" id="turno-main">
 		</div>
 	</section>
 	<script src="minmax-alpha-beta.js"></script>
